Fix overflowing on expanded graphs (closes #39)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,6 +255,10 @@ footer h3 {
     padding: 0;
     margin: 0;
     color: white;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: calc(100% - 50px);
 }
 header h1 a { text-decoration: none; }
 header h2 {
@@ -535,6 +539,12 @@ div.expanded-graph {
   box-shadow: 4px 4px 9px rgba(0,0,0,0.5);
   box-sizing: border-box;
   border-radius: 6px;
+}
+
+div.expanded-graph .chart-container-wrapper {
+    width: 100%;
+    height: calc(100% - 100px - 50px);
+    position: relative;
 }
 
 /* ==========================================================================
